--- a/task-28_02_2023.ipynb
+++ b/task-28_02_2023.ipynb
@@ -69,6 +69,52 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#sonsuz dongu\n",
+    "while True:\n",
+    "    print(\"Sonsuz dongu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sonsuz dongu\n",
+    "while 5 > 2:\n",
+    "    print(\"5 2 den buyuktur\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while i < 9:\n",
+    "    print(i)\n",
+    "    i += 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
