--- a/task-28_02_2023.ipynb
+++ b/task-28_02_2023.ipynb
@@ -112,6 +112,235 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "15\n",
+      "20\n",
+      "25\n",
+      "30\n",
+      "35\n",
+      "40\n",
+      "45\n",
+      "50\n",
+      "55\n",
+      "60\n",
+      "65\n",
+      "70\n",
+      "75\n",
+      "80\n",
+      "85\n",
+      "90\n",
+      "95\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "while x < 100:\n",
+    "    print(x)\n",
+    "    x += 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "15\n",
+      "20\n",
+      "25\n",
+      "30\n",
+      "35\n",
+      "40\n",
+      "45\n",
+      "50\n",
+      "55\n",
+      "60\n",
+      "65\n",
+      "70\n",
+      "75\n",
+      "80\n",
+      "85\n",
+      "90\n",
+      "95\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "while x <= 100:\n",
+    "    print(x)\n",
+    "    x += 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "While a false olana kadar calisir\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = True\n",
+    "while a:\n",
+    "    print(\"While a false olana kadar calisir\")\n",
+    "    a = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "Dongunun sonu\n",
+      "1\n",
+      "Dongunun sonu\n",
+      "2\n",
+      "Dongunun sonu\n",
+      "3\n",
+      "Dongunun sonu\n",
+      "4\n",
+      "Dongunun sonu\n",
+      "5\n",
+      "Dongunun sonu\n",
+      "6\n",
+      "Dongunun sonu\n",
+      "7\n",
+      "Dongunun sonu\n",
+      "8\n",
+      "Dongunun sonu\n",
+      "9\n",
+      "Dongunun sonu\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "while x < 10:\n",
+    "    print(x)\n",
+    "    x = x + 1\n",
+    "    print(\"Dongunun sonu\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "Dongunun sonu\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "while x < 10:\n",
+    "    print(x)\n",
+    "    x = x + 1\n",
+    "print(\"Dongunun sonu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste = [1,2,3,4,5,6,7,8,9,10]\n",
+    "\n",
+    "x = 0\n",
+    "while x <= len(liste):\n",
+    "    print(x)\n",
+    "    x = x+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste = [1,2,3,4,5,6,7,8,9,10]\n",
+    "\n",
+    "x = 0\n",
+    "while x < len(liste):\n",
+    "    print(liste[x] ** 2)\n",
+    "    x +=1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
