--- a/task-28_02_2023.ipynb
+++ b/task-28_02_2023.ipynb
@@ -341,6 +341,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "9\n",
+      "25\n",
+      "49\n",
+      "81\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste = [1,2,3,4,5,6,7,8,9,10]\n",
+    "\n",
+    "x = 0\n",
+    "while x < len(liste):\n",
+    "    print(liste[x] ** 2)\n",
+    "    x += 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "36\n",
+      "121\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste = [1,2,3,4,5,6,7,8,9,10,11]\n",
+    "\n",
+    "x = 0\n",
+    "while x <= len(liste):\n",
+    "    print(liste[x] ** 2)\n",
+    "    x += 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "36\n",
+      "121\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste = [1,2,3,4,5,6,7,8,9,10,11]\n",
+    "\n",
+    "x = 0\n",
+    "while x <= len(liste):\n",
+    "    print(liste[x] ** 2)\n",
+    "    x += 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "36\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 1\n",
+    "while x <= 10:\n",
+    "    print(x ** 2)\n",
+    "    x += 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
