--- a/task-28_02_2023.ipynb
+++ b/task-28_02_2023.ipynb
@@ -436,6 +436,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "girdiginiz sayi 45. Bravo Dogru tahmin\n"
+     ]
+    }
+   ],
+   "source": [
+    "sayi = 45\n",
+    "while True:\n",
+    "    tahmin = int(input(\"Bir sayi giriniz:\"))\n",
+    "\n",
+    "    if sayi < tahmin:\n",
+    "        print(f\"Girdiginiz sayi {tahmin}. Tahminini azalt\")\n",
+    "    elif sayi > tahmin:\n",
+    "        print(f\"Girdiginiz sayi {Tahmin}. Tahminini arttir\")\n",
+    "    else:\n",
+    "        print(f\"girdiginiz sayi {tahmin}. Bravo Dogru tahmin\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Girdiginiz sayi 85. Tahminini azalt\n",
+      "Girdiginiz sayi 78. Tahminini azalt\n",
+      "Girdiginiz sayi 65. Tahminini azalt\n",
+      "Girdiginiz sayi 99. Tahminini azalt\n",
+      "girdiginiz sayi 45. Bravo Dogru tahmin\n",
+      "5 denemede bildin\n"
+     ]
+    }
+   ],
+   "source": [
+    "sayi = 45\n",
+    "sayac = 0\n",
+    "while True:\n",
+    "    sayac += 1\n",
+    "    tahmin = int(input(\"Bir sayi giriniz:\"))\n",
+    "\n",
+    "    if sayi < tahmin:\n",
+    "        print(f\"Girdiginiz sayi {tahmin}. Tahminini azalt\")\n",
+    "    elif sayi > tahmin:\n",
+    "        print(f\"Girdiginiz sayi {Tahmin}. Tahminini arttir\")\n",
+    "    else:\n",
+    "        print(f\"girdiginiz sayi {tahmin}. Bravo Dogru tahmin\")\n",
+    "        break\n",
+    "print(f\"{sayac} denemede bildin\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sayi = 45\n",
+    "sayac = 0\n",
+    "while True:\n",
+    "    sayac += 1\n",
+    "    tahmin = int(input(\"Bir sayi giriniz:\"))\n",
+    "\n",
+    "    if sayi < tahmin:\n",
+    "        print(f\"Girdiginiz sayi {tahmin}. Tahminini azalt\")\n",
+    "    elif sayi > tahmin:\n",
+    "        print(f\"Girdiginiz sayi {Tahmin}. Tahminini arttir\")\n",
+    "    else:\n",
+    "        print(f\"girdiginiz sayi {tahmin}. Bravo Dogru tahmin\")\n",
+    "        break\n",
+    "print(f\"{sayac} denemede bildin\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
