--- a/task-28_02_2023.ipynb
+++ b/task-28_02_2023.ipynb
@@ -520,10 +520,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Girdiginiz sayi 50. Tahminini azalt\n",
+      "Girdiginiz sayi 25. Tahminini azalt\n",
+      "Girdiginiz sayi 12. Tahminini azalt\n",
+      "girdiginiz sayi 7. Bravo Dogru tahmin\n",
+      "4 denemede bildin\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "sayi = random.randint(0,100)\n",
+    "sayac = 0\n",
+    "while sayac < 5:\n",
+    "    sayac += 1\n",
+    "    tahmin = int(input(\"Bir sayi giriniz:\"))\n",
+    "\n",
+    "    if sayi < tahmin:\n",
+    "        print(f\"Girdiginiz sayi {tahmin}. Tahminini azalt\")\n",
+    "    elif sayi > tahmin:\n",
+    "        print(f\"Girdiginiz sayi {Tahmin}. Tahminini arttir\")\n",
+    "    else:\n",
+    "        print(f\"girdiginiz sayi {tahmin}. Bravo Dogru tahmin\")\n",
+    "        break\n",
+    "print(f\"{sayac} denemede bildin\")"
+   ]
   },
   {
    "cell_type": "code",
