--- a/task_02_03_2023.ipynb
+++ b/task_02_03_2023.ipynb
@@ -77,6 +77,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"3\" + \"3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Techpro\\n is perfekt\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(r\"Techpro\\n is perfekt\") # \\n yok sayar-----r"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
